force-app/main/default/objects/Movement__c/Movement__c.object-meta.xml
<CustomObject>
    <label>Movement</label>
    <pluralLabel>Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Movement Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>