force-app/main/default/objects/Movement__c/fields/Cache__c.field-meta.xml
<CustomField>
    <fullName>Cache__c</fullName>
    <label>Cache</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>