force-app/main/default/objects/Movement__c/fields/Radicalism__c.field-meta.xml
<CustomField>
    <fullName>Radicalism__c</fullName>
    <label>Radicalism</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>