force-app/main/default/objects/Movement__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Support</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>